--- a/mycontact.html
+++ b/mycontact.html
@@ -12,7 +12,7 @@
     <p>my email: k.warayout@gmail.com</p>
     <p>tel : 0632399339</p>
     
-    <form action="mailto:nongnuch200955@hotmail.com" method="post" enctype="text/plain">
+    <form action="mailto:k.warayout@gmail.com" method="post" enctype="text/plain">
         <label>Your Name:</label>
         <input type="text" name='name' value="" /><br/>
         <label>Your Email:</label>
